CHANGES
=======

* modify setup.cfg
* modify the configuration of bter/etc in setup.cfg
* add etc file
* add etc file
* mv README to README.md
* add the build tools
* modify the .gitignore to exclude log file
* rm log file
* delete some useless file
* add some example api
* init the bter demo