@@ -1,0 +1,24 @@
+# coding=utf8
+#  Copyright 2017~ mengalong <alongmeng@gmail.com>
+#
+# Licensed under the Apache License, Version 2.0 (the "License"); you may
+# not use this file except in compliance with the License. You may obtain
+# a copy of the License at
+#
+#      http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
+# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
+# License for the specific language governing permissions and limitations
+# under the License.
+import daiquiri
+
+logger = daiquiri.getLogger(__name__)
+
+class BterBtcPollster(object):
+    def __init__(self, conf=None):
+        self.conf = conf
+
+    def get_samples(self):
+        logger.debug("In the plugin:%s" % "BterBtcPollster")
