@@ -1,7 +1,8 @@
 [DEFAULT]
+namespaces = bter
 
 [log]
 log_format = %(asctime)s [PID %(process)d] [%(levelname)s] %(name)s:%(lineno)d %(message)s
 log_path = /Users/mengalong/code/git/bter/bter/log
 log_filename = bter.log
-log_level = INFO
+log_level = DEBUG
