@@ -4,3 +4,4 @@ setuptools
 pbr
 ConfigParser
 cotyledon
+stevedore
