@@ -28,4 +28,7 @@ data_files =
 [entry_points]
 console_scripts =
 	bter-server = bter.cmd.server:main
+
+bter.poll.bter =
+    bter.btc = bter.plugin.bter:BterBtcPollster
 	
